<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1F0A0"
    android:padding="24dp">


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/back"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/irish_grover"
        android:background="@drawable/rounded_button" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="#2B3A1B"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/irish_grover"/>

    <TextView
        android:id="@+id/txtAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAboutUs"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#2B3A1B"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/irish_grover"/>

</RelativeLayout>